# polyplot

./: CMakeLists.txt  README.md  plot.py  polynomial.c
